# bio_ik

./: .iwyu_mapping.imp  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING_8md.html  Doxyfile  README.md  README_8md.html  annotated.html  auto-example.html  bio__ik_8hpp.html  bio__ik_8hpp__incl.map  bio__ik_8hpp__incl.md5  bio__ik_8hpp_source.html  bio_ik_kinematics_description.xml  classCurried-members.html  classCurried.html  classParameterLoader-members.html  classParameterLoader.html  classParameterLoader_af9ce2ed8c8373cada9e78483145d36aa_cgraph.map  classParameterLoader_af9ce2ed8c8373cada9e78483145d36aa_cgraph.md5  classbio__ik_1_1AvoidJointLimitsGoal-members.html  classbio__ik_1_1AvoidJointLimitsGoal.html  classbio__ik_1_1AvoidJointLimitsGoal__coll__graph.md5  classbio__ik_1_1AvoidJointLimitsGoal__inherit__graph.map  classbio__ik_1_1AvoidJointLimitsGoal_a1420f2c980163355ec78900b6ca15c1f_cgraph.map  classbio__ik_1_1AvoidJointLimitsGoal_a1420f2c980163355ec78900b6ca15c1f_cgraph.md5  classbio__ik_1_1BalanceGoal-members.html  classbio__ik_1_1BalanceGoal.html  classbio__ik_1_1BalanceGoal__coll__graph.map  classbio__ik_1_1BalanceGoal__inherit__graph.md5  classbio__ik_1_1BalanceGoal_a20335cf0a473050ee54a2283e8dc0f4c_cgraph.map  classbio__ik_1_1BalanceGoal_a20335cf0a473050ee54a2283e8dc0f4c_cgraph.md5  classbio__ik_1_1BalanceGoal_a3c1928e22a9af1966af296be78158e75_cgraph.map  classbio__ik_1_1BalanceGoal_a3c1928e22a9af1966af296be78158e75_cgraph.md5  classbio__ik_1_1CenterJointsGoal-members.html  classbio__ik_1_1CenterJointsGoal.html  classbio__ik_1_1CenterJointsGoal__coll__graph.map  classbio__ik_1_1CenterJointsGoal__inherit__graph.md5  classbio__ik_1_1CenterJointsGoal_a296ded3a090be2c340099d9e318b54ce_cgraph.map  classbio__ik_1_1CenterJointsGoal_a296ded3a090be2c340099d9e318b54ce_cgraph.md5  (+1100 more)
.github/workflows/: ci.yaml  doxygen.yaml  format.yaml  prerelease.yaml
cmake/: CompilerWarnings.cmake  StaticAnalyzers.cmake
include/_external/: expected.hpp
include/bio_ik/: bio_ik.h  bio_ik.hpp  forward_kinematics.hpp  frame.h  frame.hpp  goal.h  goal.hpp  goal_types.h  goal_types.hpp  ik_base.hpp  ik_evolution_1.hpp  ik_evolution_2.hpp  ik_gradient.hpp  ik_test.hpp  parameter_loader.hpp  parameters.hpp  problem.hpp  robot_info.h  robot_info.hpp  status_or.hpp  utils.hpp
include/bio_ik/util/: curried.hpp  no_discard.hpp  parameter_loader.hpp  result.hpp  validate.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  (+108 more)
src/: bio_ik_parameters.yaml  forward_kinematics.h  forward_kinematics.hpp  goal_types.cpp  ik_base.h  ik_base.hpp  ik_cppoptlib.cpp  ik_evolution_1.cpp  ik_evolution_2.cpp  ik_gradient.cpp  ik_neural.cpp  ik_parallel.h  ik_parallel.hpp  ik_test.cpp  kinematics_plugin.cpp  parameters.cpp  problem.cpp  problem.h  problem.hpp  utils.h  utils.hpp
test/: CMakeLists.txt  frame_tests.cpp  goal_tests.cpp  parameter_tests.cpp  utest.cpp
