<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bio_ik</name>
  <version>2.0.0</version>
  <description>BioIK for ROS 2</description>

  <maintainer email="0ruppel@informatik.uni-hamburg.de">Philipp Sebastian Ruppel</maintainer>
  <maintainer email="me@v4hn.de">Michael Goerner</maintainer>
  <maintainer email="tylerjw@gmail.com">Tyler Weaver</maintainer>

  <license>BSD</license>

  <author email="0ruppel@informatik.uni-hamburg.de">Philipp Sebastian Ruppel</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>backward_ros</depend>
  <depend>eigen</depend>
  <depend>fmt</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>pluginlib</depend>
  <depend>range-v3</depend>
  <depend>rclcpp</depend>
  <depend>tf2_kdl</depend>

  <!-- <depend>tf2</depend> -->
  <!-- <depend>tf2_eigen</depend> -->
  <!-- <depend>tf2_eigen_kdl</depend> -->
  <!-- <depend>tf2_geometry_msgs</depend> -->

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <moveit_core plugin="${prefix}/bio_ik_kinematics_description.xml"/>
  </export>

</package>
